@@ -7,6 +7,7 @@ import java.sql.SQLException;
 import java.sql.Statement;
 import java.time.Instant;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -27,7 +28,7 @@ public class DataBaseMigrator {
 	private final SchemaMigrationOptions schemaOptions;
 
 	public DataBaseMigrator(final DataBase dataBase, final Collection<? extends DataBaseMigration> migrations) {
-		this(dataBase, migrations, List.of(), SchemaMigrationOptions.NONE);
+		this(dataBase, migrations, Collections.emptyList(), SchemaMigrationOptions.NONE);
 	}
 
 	public DataBaseMigrator(
@@ -36,41 +37,12 @@ public class DataBaseMigrator {
 			final Collection<? extends DataBaseTable<? extends DataBaseEntry>> tables,
 			final SchemaMigrationOptions schemaOptions) {
 		this.dataBase = dataBase;
-		this.migrations = migrations == null ? List.of()
+		this.migrations = migrations == null ? Collections.emptyList()
 				: migrations.stream()
 						.sorted(Comparator.comparingInt(DataBaseMigration::order).thenComparing(DataBaseMigration::name))
 						.collect(Collectors.toList());
-		this.tables = tables == null ? List.of() : tables;
+		this.tables = tables == null ? Collections.emptyList() : tables;
 		this.schemaOptions = schemaOptions == null ? SchemaMigrationOptions.NONE : schemaOptions;
-	}
-
-	private void ensureMigrationTable(final Connection connection) throws SQLException {
-		try (Statement stmt = connection.createStatement()) {
-			stmt.executeUpdate("CREATE TABLE IF NOT EXISTS " + this.migrationTableName() + " (" + "id VARCHAR(255) PRIMARY KEY, "
-					+ "migration_order INTEGER NOT NULL, " + "name VARCHAR(255) NOT NULL, " + "applied_at VARCHAR(64) NOT NULL" + ");");
-		}
-	}
-
-	private void insertAppliedMigration(final Connection connection, final DataBaseMigration migration) throws SQLException {
-		try (PreparedStatement stmt = connection.prepareStatement(
-				"INSERT INTO " + this.migrationTableName() + " (id, migration_order, name, applied_at) VALUES (?, ?, ?, ?)")) {
-			stmt.setString(1, migration.id());
-			stmt.setInt(2, migration.order());
-			stmt.setString(3, migration.name());
-			stmt.setString(4, Instant.now().toString());
-			stmt.executeUpdate();
-		}
-	}
-
-	private Set<String> loadAppliedMigrationIds(final Connection connection) throws SQLException {
-		final Set<String> ids = new LinkedHashSet<>();
-		try (Statement stmt = connection.createStatement();
-				ResultSet rs = stmt.executeQuery("SELECT id FROM " + this.migrationTableName() + " ORDER BY migration_order ASC")) {
-			while (rs.next()) {
-				ids.add(rs.getString("id"));
-			}
-		}
-		return ids;
 	}
 
 	public void migrate() throws DBException {
@@ -106,14 +78,43 @@ public class DataBaseMigrator {
 		}
 	}
 
-	private String migrationTableName() {
-		return SQLQueryVisitors.forConnector(this.dataBase.getConnector()).qualifiedName(this.dataBase.getMigrationSchemaName());
-	}
-
 	@Override
 	public String toString() {
 		return "DataBaseMigrator@" + System.identityHashCode(this) + " [dataBase=" + this.dataBase + ", migrations="
 				+ this.migrations.stream().map(DataBaseMigration::id).collect(Collectors.toList()) + "]";
+	}
+
+	private void ensureMigrationTable(final Connection connection) throws SQLException {
+		try (Statement stmt = connection.createStatement()) {
+			stmt.executeUpdate("CREATE TABLE IF NOT EXISTS " + this.migrationTableName() + " (" + "id VARCHAR(255) PRIMARY KEY, "
+					+ "migration_order INTEGER NOT NULL, " + "name VARCHAR(255) NOT NULL, " + "applied_at VARCHAR(64) NOT NULL" + ");");
+		}
+	}
+
+	private void insertAppliedMigration(final Connection connection, final DataBaseMigration migration) throws SQLException {
+		try (PreparedStatement stmt = connection.prepareStatement(
+				"INSERT INTO " + this.migrationTableName() + " (id, migration_order, name, applied_at) VALUES (?, ?, ?, ?)")) {
+			stmt.setString(1, migration.id());
+			stmt.setInt(2, migration.order());
+			stmt.setString(3, migration.name());
+			stmt.setString(4, Instant.now().toString());
+			stmt.executeUpdate();
+		}
+	}
+
+	private Set<String> loadAppliedMigrationIds(final Connection connection) throws SQLException {
+		final Set<String> ids = new LinkedHashSet<>();
+		try (Statement stmt = connection.createStatement();
+				ResultSet rs = stmt.executeQuery("SELECT id FROM " + this.migrationTableName() + " ORDER BY migration_order ASC")) {
+			while (rs.next()) {
+				ids.add(rs.getString("id"));
+			}
+		}
+		return ids;
+	}
+
+	private String migrationTableName() {
+		return SQLQueryVisitors.forConnector(this.dataBase.getConnector()).qualifiedName(this.dataBase.getMigrationSchemaName());
 	}
 
 }
